# full_stack_ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cdk.json  makefile  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: destroy.yaml  test_build_deploy.yaml  validate_deployment.yaml
configs/: default_config.json
src/api/: Dockerfile  pipeline.py  ui.py
src/api/templates/: index.html  upload.html
src/app/: app.py
src/app/stacks/: stack.py
src/train/: download_champion.py  promote_model.py  train.py
src/train/utils/: experiment.py  loaders.py  metadata.py  models.py  preprocessing.py  training.py
src/utils/: core.py
tests/api/: Dockerfile.test  docker-compose.yaml  e2e_ui.py  test_ui.py  validate_deployment.py
tests/app/: test_stack.py
tests/train/: test_loaders.py  test_models.py  test_preprocessing.py  test_train.py
